# vix

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  buffer.c  buffer.h  build.zig  build.zig.zon  flake.nix  lexer.c  list.h  main.vix
include/: allocator.h  analyser.h  arena.h  ast.h  compilation_env.h  defs.h  emit.h  error_message.h  generator.h  graph.h  hash.h  hashmap.h  hashset.h  instructions.h  lexer.h  parser.h  printing.h  qbe.h  queue.h  scope.h  str.h  types.h  utf8.h  util.h  vector.h
src/: allocator.c  allocator.h  analyser.c  analyser.h  arena.c  array.h  ast.zig  ast_render.c  ast_render.h  compilation_env.c  defs.h  emit.c  emit.h  error_message.c  error_message.h  generator.c  generator.h  graph.c  graph.zig  hash.c  instructions.c  lexer.c  lexer.h  lexer.zig  main.c  main.zig  parser.c  parser.h  parser.zig  printing.c  printing.zig  qbe.c  qbe.h  qtype.c  scope.c  str.c  str.h  string.h  types.c  types.zig  (+6 more)
